fix(core): add allways on scrollbar, to prevend flickering

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -30,6 +30,7 @@ body {
     background-attachment: fixed;
     font-weight: 300;
     line-height: 1.6;
+    scrollbar-gutter: stable;
 }
 
 body:has(#darkmode:checked) {
